[FIX] web_editor: fix url input dropdown off screen
Steps to reproduce the bug:

- Open the Menu Editor.
- Add a menu item.
- Type a URL (which will trigger the autocomplete).
- Bug: You can't select the last URLs in the autocomplete dropdown
because it goes off screen and can't be scrolled.

This bug was introduced by the commit [1]. Since this commit, all modal
dialogs are vertically centered, which is why the bug fixed in this
commit occurred.

[1]: https://github.com/odoo/odoo/commit/dd141a22f44ea88af18448c4a6089252daeba8cc

task-3580373

X-original-commit: 23272e38d822c734d1ea2fdb404ba2b1d6890cb3

--- a/addons/web_editor/static/src/scss/web_editor.common.scss
+++ b/addons/web_editor/static/src/scss/web_editor.common.scss
@@ -1035,7 +1035,7 @@ section, .oe_img_bg, [data-oe-shape-data] {
 
 // Autocomplete dropdowns
 .ui-autocomplete {
-    max-height: 50vh;
+    max-height: 45vh;
     overflow-y: auto;
     overflow-x: hidden;
 
